tests/ui/const-generics/opaque_types2.stderr
error[E0308]: mismatched types
  --> $DIR/opaque_types2.rs:14:13
   |
LL | type Foo = impl Sized;
   |            ---------- the found opaque type
...
LL |     foo::<{ baz() }>();
   |             ^^^^^ expected `u32`, found opaque type
   |
   = note:     expected type `u32`
           found opaque type `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
